fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -204,7 +204,7 @@ button.pkg{
     justify-content: space-between;
     position: absolute;
     top: 3em;
-    right: 0em;
+    right: 1em;
     height: 20px;
     width: 30px;
     cursor: pointer;
@@ -260,9 +260,9 @@ span.bar {
     }
 
     p.line{
-        font-size: 2.5rem;
+        font-size: 1.5rem;
         left: 0em;
-        top: 2.5em;
+        top: 4em;
     }
 
     div.arrow{
@@ -278,8 +278,6 @@ span.bar {
 
     section.bottom{
         width: 80%;
-        margin-left: 5em;
-        padding: 5em;
         flex-direction: column-reverse;
         align-items:center
     }
